--- a/style.css
+++ b/style.css
@@ -3,14 +3,11 @@ body {
     color: #440B72;
     width: 100%;
     height: 100%;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
+    padding: 0.6em;
 }
 
 .catImg {
     max-height: 30%;
     max-width: 50%;
+    display: block;
 }
